meta tags added

--- a/alkoholtyper.html
+++ b/alkoholtyper.html
@@ -8,8 +8,8 @@
   <link rel="stylesheet" href="css/header.css">
   <link rel="stylesheet" href="css/alkoholtyper.css">
   <title>Typer af alkohol</title>
-  <meta name="description" content="">
-  <meta name="keywords" content="">
+  <meta name="description" content="Opdag forskellige typer af alkohol og deres mest populære drinks! Vores hjemmeside tilbyder information og opskrifter på cocktails lavet med tequila, rom, gin, vodka, whiskey og likører. Lær at blande dine foretrukne drinks og imponer dine venner med din bartending færdigheder.">
+  <meta name="keywords" content="alkoholtyper, cocktails, opskrifter, tequila, rom, gin, vodka, whiskey, likører, bartending">
 </head>
 <body>
     <header>
