--- a/cocktails.html
+++ b/cocktails.html
@@ -8,8 +8,8 @@
   <link rel="stylesheet" href="css/header.css">
   <link rel="stylesheet" href="css/cocktails.css">
   <title>Cocktails</title>
-  <meta name="description" content="">
-  <meta name="keywords" content="">
+  <meta name="description" content="Find opskrifter på lækre cocktails! Vores hjemmeside tilbyder en bred vifte af opskrifter på forfriskende cocktails, herunder long drinks, martinier, tropiske drinks, on the rocks og daiquiries. Perfekt til at imponere dine venner eller til at nyde en afslappende aften derhjemme.">
+  <meta name="keywords" content="cocktails, drinks, opskrifter, long drinks, martinier, tropiske drinks, on the rocks, daiquiries">
 </head>
 <body>
     <header>
