--- a/gin.html
+++ b/gin.html
@@ -8,8 +8,8 @@
   <link rel="stylesheet" href="css/page-layout.css">
   <link rel="stylesheet" href="css/header.css">
   <link rel="stylesheet" href="css/tequila.css">
-  <meta name="description" content="">
-  <meta name="keywords" content="">
+  <meta name="description" content="Få opskrifter på lækre gin-cocktails! Vores hjemmeside tilbyder opskrifter på populære gin-cocktails som Gin & Tonic, Negroni, Gin Martini, Gimlet og Tom Collins. Lær at blande disse klassiske cocktails og nyd en forfriskende drink med gin som hovedingrediens.">
+  <meta name="keywords" content="gin, gin cocktails, opskrifter, Gin & Tonic, Negroni, Gin Martini, Gimlet, Tom Collins">
 </head>
 <body>
     <header>
