--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
   <link rel="stylesheet" href="css/header.css">
   <link rel="stylesheet" href="css/slideshow.css">
   <link rel="stylesheet" href="css/index-main.css">
-  <meta name="description" content="">
-  <meta name="keywords" content="">
+  <meta name="description" content="Få inspiration til lækre cocktails, mocktails og sjusser! Vores hjemmeside tilbyder en bred vifte af opskrifter og tips til at blande dine egne drinks. Perfekt til unge studerende og unge voksne mellem 18 og 30 år.">
+  <meta name="keywords" content="cocktails, drinks, alkohol, opskrifter, mocktails, sjusser, shots, alkoholtyper, unge studerende, 18-30 år, inspiration, mixology">
 </head>
 <body>
     <header>
