--- a/long-drinks.html
+++ b/long-drinks.html
@@ -8,8 +8,8 @@
     <link rel="stylesheet" href="css/header.css">
     <link rel="stylesheet" href="css/longdrinks.css">
     <title>Long drinks</title>
-    <meta name="description" content="">
-    <meta name="keywords" content="">
+    <meta name="description" content="Find opskrifter og nyd lækre long drinks! Vores hjemmeside tilbyder opskrifter på forfriskende long drinks, herunder klassikere som Long Island Ice Tea og Caipirinha. Lær at blande disse skønne cocktails og imponer dine venner med dine bartending færdigheder.">
+    <meta name="keywords" content="long drinks, cocktails, opskrifter, Long Island Ice Tea, Caipirinha, bartending">
 </head>
 <body>
     <header>
