--- a/tequila.html
+++ b/tequila.html
@@ -8,8 +8,8 @@
     <link rel="stylesheet" href="css/header.css">
     <link rel="stylesheet" href="css/tequila.css">
     <title>Tequila</title>
-    <meta name="description" content="">
-    <meta name="keywords" content="">
+    <meta name="description" content="Oplev spændende tequila-cocktails! Vores hjemmeside tilbyder opskrifter på lækre tequila-baserede drinks, herunder klassikere som Margarita, Tequila Sunrise, Paloma, Tequila Smash og Tequila Mojito. Lær at blande disse fantastiske cocktails og imponer dine venner med dine bartending færdigheder.">
+    <meta name="keywords" content="tequila, cocktails, opskrifter, Margarita, Tequila Sunrise, Paloma, Tequila Smash, Tequila Mojito, bartending">
 </head>
 <body>
     <header>
