--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
           <a href="https://magn3054.github.io/drinks/cocktails.html">Cocktails</a>
           <a href="https://magn3054.github.io/drinks/stand-by.html">Mocktails</a>
           <a href="https://magn3054.github.io/drinks/stand-by.html">Sjusser</a>
-          <a href="https://magn3054.github.io/drinks/stand-by.html">Shots!!!</a>
+          <a href="https://magn3054.github.io/drinks/stand-by.html">Shots</a>
           <a href="https://magn3054.github.io/drinks/alkoholtyper.html">Alkoholtyper</a>
         </div>
       </nav>
